# glfw-game

./: CMakeLists.txt  CMakePresets.json  README.md  copy-assets.cmake  main.cpp
include/: EBO.h  VAO.h  VBO.h  camera.h  shaderClass.h  texture.h
resources/shaders/: default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  main.cpp  shaderClass.cpp  texture.cpp
